--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -25,7 +25,8 @@ header{
   align-items:center;
 }
 header.container{
-
+  display:flex;
+  flex-direction:column;
 }
 .container{
   width:960px;
@@ -36,6 +37,7 @@ header.container{
 .top-banner{
   display:flex;
   flex-direction:row;
+  margin-top:1rem;
   background-color:cadetblue;
   width:100%;
   height:3rem;
@@ -43,7 +45,7 @@ header.container{
 
 .top-logo{
   display:flex;
-  align-items:center;  
+  align-items:center;
 }
 
 .top-logo img{
@@ -57,78 +59,156 @@ header.container{
 }
 
 .brand{
+  display:flex;
+  align-items:center;
+  color:white;
   border: purple 1px solid;
 
 }
 
 .nav{
   border: purple 1px solid;
-
+  display:flex;
+  justify-content:flex-end;
+  width:70%;
 }
 
-.mobile.nav{
-  border: purple 1px solid;
+.nav li{
+  list-style: none;
+  color:white;
+  padding: 1rem 2rem;
+}
 
+.mobile-nav li{
+
+  list-style: none;
+  color:white;
+  padding: 1rem 2rem;
+  display:none;
+}
+
+.tag-container{
+  display:flex;
+  justify-content:flex-end;
+
+  width:960px;
 }
 
 .tagline{
   border: purple 1px solid;
-  background-color:purple;
-  height:100px;
+  background-color:white;
+  padding: 1.5rem 5rem;
+  padding-right:3rem;
+  width:50%;
+  margin-top:10rem;
+  margin-right:-2rem;
+}
+
+h1{
+  font-weight:bold;
+  font-size:2rem;
+  line-height:1.2;
+  margin:0;
+  padding:0;
+
 }
 
 .main{
+  margin-top:3rem;
   border: purple 1px solid;
-  background-color:purple;
-  height:100px;
+  width:100%;
 }
 
 .icons{
   border: purple 1px solid;
-  background-color:purple;
-  height:100px;
+  height:8rem;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  margin-bottom:3rem;
+}
+
+.exam,
+.fittings,
+.delivery{
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
+  align-items:center;
+  margin: 0 3rem;
+  height:8rem;
+}
+
+.exam p,
+.fittings p,
+.delivery p{
+  width:5rem;
 }
 
 .exam{
-  border: purple 1px solid;
-  background-color:purple;
-  height:100px;
+
+}
+
+.exam img{
+  width:3.5rem;
 }
 
 .fittings{
-  border: purple 1px solid;
-  background-color:purple;
-  height:100px;
+
+}
+
+.fittings img{
+  width:5rem;
 }
 
 .delivery{
-  border: purple 1px solid;
-  background-color:purple;
-  height:100px;
+
+}
+
+.delivery img{
+  width:5rem;
+}
+
+.mid {
+  display:flex;
+  justify-content:center;
+  margin-bottom:5rem;
 }
 
 .philosophy{
-  border: purple 1px solid;
-  background-color:purple;
-  height:100px;
+  padding-right:2.5%;
+  display:flex;
+  flex-direction:column;
+}
+
+.philosophy,
+.appointments{
+  width:23%;
 }
 
 .title{
-  border: purple 1px solid;
-  background-color:purple;
-  height:100px;
+  width:10rem;
+  color:white;
+  background-color:cadetblue;
+  padding:.5rem 1.25rem;
+  font-weight:bold;
+  margin-bottom:1rem;
 }
 
-.info{
-  border: purple 1px solid;
-  background-color:purple;
-  height:100px;
+h2{
+  line-height:1.4rem;
+}
+
+.info p{
+  width:100%;
+  padding:1rem 0;
+  line-height:1.4rem;
+
 }
 
 .appointments{
-  border: purple 1px solid;
-  background-color:purple;
-  height:100px;
+  padding-left:2.5%;
+
 }
 
 .bot.logo{
@@ -140,5 +220,4 @@ header.container{
 .copyr{
   border: purple 1px solid;
   background-color:purple;
-  height:100px;
 }
