--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -2,6 +2,8 @@ html{
   font-family:helvetica;
   font-size:18px;
   line-height:1.4;
+  margin:0;
+  padding:0;
 }
 body{
   display:flex;
@@ -286,7 +288,8 @@ h2{
   }
   .tag-container{
     width:100%;
-    height:3rem;
+    display:flex;
+    justify-content: center;
   }
   .tagline{
     padding:1rem auto;
@@ -294,12 +297,18 @@ h2{
     height:1rem;
     margin-top:9rem;
     margin-right:0;
-    text-align: center;
+    display:flex;
+    justify-content: center;
   }
 
   h1{
       font-size:1rem;
       height:1rem;
+      width:100%;
+      min-width:17rem;
+      text-align:center;
+      margin:0;
+      padding:0;
   }
 
 .main{
@@ -325,19 +334,40 @@ h2{
     flex-direction:column;
     align-items:center;
     width:100%;
+    font-size:.77rem;
   }
   .title{
     width:100%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
   }
   .philosophy,
-  .appointments,{
+  .appointments{
+    display:flex;
+    flex-direction:column;
     align-items:center;
+    justify-content:center;
     width:100%;
     margin:0;
     padding:0;
   }
   .copyr{
     display:none;
+  }
+  .info{
+    width:100%;
+
+    padding-bottom:4rem;
+  }
+  .info p{
+    height:100%;
+    width:90%;
+    text-align:center;
+    padding:1rem;
+  }
+  h2{
+    text-align:center;
   }
   footer{
     justify-content: center;
